2010-06-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add some initial malloc and realloc tests to test
	suite.
	* tests/simulate/stdlib/malloc-1.c: New file.
	* tests/simulate/stdlib/malloc-2.c: (Ditto.)
	* tests/simulate/stdlib/malloc-3.c: (Ditto.)
	* tests/simulate/stdlib/realloc-1.c: (Ditto.)

2010-04-16  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28574.
	* include/avr/iox128d3.h - Modify EVSYS_t and ADC_t structures to 
	  include reserved registers.	
	* include/avr/iox16d4.h  - Same.
	* include/avr/iox192d3.h - Same.
	* include/avr/iox256d3.h - Same.
	* include/avr/iox32d4.h  - Same.
	* include/avr/iox64d3.h  - Same.

2010-04-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (CHECK_BUILTIN_DELAY_CYCLES): Reimplement as a
	compiler + grep pipeline rather than through AC_LINK_IFELSE, as we
	cannot rely on a working linker while building the library.

2010-04-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: Fix directory name for ATxmega64A1U.

2010-04-06  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28584.
	* include/avr/iocanxx.h - Add word definitions CANIE and CANEN.

2010-04-06  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28627.
	* include/avr/power.h - ATmega32U2 defined for clock_prescale_set.

2010-04-06  Anitha Boyapati <anitha.boyapati@atmel.com>

        Fix bug #28901.
        * include/avr/iox128a1.h - Removed GPIO and CPU memory map entries.
        * include/avr/iox128a1u.h - Same.
        * include/avr/iox128a3.h - Same.
        * include/avr/iox128d3.h - Same.
        * include/avr/iox16a4.h - Same.
        * include/avr/iox16d4.h - Same.
        * include/avr/iox192a3.h - Same.
        * include/avr/iox192d3.h - Same.
        * include/avr/iox256a3.h - Same.
        * include/avr/iox256a3b.h - Same.
        * include/avr/iox256d3.h - Same.
        * include/avr/iox32a4.h - Same.
        * include/avr/iox32d4.h - Same.